--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 @apeswapfinance:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=25ec50e25b1327197f0d07435d85f6bb2a2568da
+//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+registry=https://npm.pkg.github.com/ApeSwapFinance
 always-auth=true
