--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,3 @@
 @apeswapfinance:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
-registry=https://npm.pkg.github.com/ApeSwapFinance
+//npm.pkg.github.com/:_authToken=NPM_TOKEN
 always-auth=true
