--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 @apeswapfinance:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=NPM_TOKEN
+//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+registry=https://npm.pkg.github.com/ApeSwapFinance
 always-auth=true
